--- a/session9/Telebot.ipynb
+++ b/session9/Telebot.ipynb
@@ -28,8 +28,16 @@
         "import gtts\n",
         "import qrcode\n",
         "from khayyam import JalaliDate, JalaliDatetime \n",
-        "\n",
-        "bot = telebot.TeleBot(\"5702800312:AAGzHJ5kGLjeC8KRUgwdCi74zMB9wbELiJw\", parse_mode=None)"
+        "from google.colab import drive"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "drive.mount('/content/drive')"
       ]
     },
     {
@@ -40,6 +48,9 @@
       },
       "outputs": [],
       "source": [
+        "\n",
+        "bot = telebot.TeleBot(\"5702800312:AAGzHJ5kGLjeC8KRUgwdCi74zMB9wbELiJw\", parse_mode=None)\n",
+        "\n",
         "markup = telebot.types.ReplyKeyboardMarkup(row_width=7)\n",
         "key_1 = telebot.types.KeyboardButton('/start')\n",
         "key_2 = telebot.types.KeyboardButton('/help')\n",
@@ -50,50 +61,26 @@
         "key_7 = telebot.types.KeyboardButton('/max')\n",
         "key_8 = telebot.types.KeyboardButton('/argmax')\n",
         "key_9 = telebot.types.KeyboardButton('/qrcode')\n",
-        "markup.add(key_1, key_2, key_3, key_4, key_5, key_6, key_7, key_8, key_9)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 331,
-      "metadata": {
-        "id": "iV_yNpENdCJq"
-      },
-      "outputs": [],
-      "source": [
+        "markup.add(key_1, key_2, key_3, key_4, key_5, key_6, key_7, key_8, key_9)\n",
+        "\n",
+        "\n",
         "@bot.message_handler(commands=['start'])\n",
         "def send_welcome(message):\n",
         "  user_first_name = str(message.chat.first_name) \n",
-        "  bot.send_message(message.chat.id, f\" Hi, {user_first_name}  \\n\\n Welcome to Najmeh BOT \", reply_markup=markup)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 332,
-      "metadata": {
-        "id": "3HhZ9BMK5Tao"
-      },
-      "outputs": [],
-      "source": [
+        "  bot.send_message(message.chat.id, f\" Hi, {user_first_name}  \\n\\n Welcome to Najmeh BOT \", reply_markup=markup)\n",
+        "  \n",
+        "\n",
         "@bot.message_handler(commands=['help'])\n",
         "def send_welcome(message):\n",
         "  bot.send_message(message.chat.id, \"you can send these commands to use me:\\n\\n\"+ \n",
-        "                          \"/game or /new-game - play guess game\\n\"+ \n",
-        "                          \"/age - enter your birthdate to calculate your age\\n\"+\n",
-        "                          \"/text_to_voice - convert your text to voice\\n\"+\n",
+        "                          \"/game or /new_game - play guess game🎮\\n\"+ \n",
+        "                          \"/age - enter your birthdate to calculate your age📆\\n\"+\n",
+        "                          \"/text_to_voice - convert your text to voice🔊\\n\"+\n",
         "                          \"/max - print max number of your list\\n\"+\n",
         "                          \"/argmax - print max index of your list\\n\"+\n",
-        "                          \"/qrcode - get qrcode of your list\\n\", reply_markup=markup)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 333,
-      "metadata": {
-        "id": "YMBg-t9edf1o"
-      },
-      "outputs": [],
-      "source": [
+        "                          \"/qrcode - get qrcode of your list\\n\", reply_markup=markup)\n",
+        "\n",
+        "\n",
         "@bot.message_handler(commands=['game', 'new-game'])\n",
         "def game(message):\n",
         "  global rnnum\n",
@@ -110,17 +97,10 @@
         "            else:\n",
         "                bot.send_message(message.chat.id, \"please go down.\")\n",
         "\n",
-        "            bot.add_message_handler(guess)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 334,
-      "metadata": {
-        "id": "S9MnoOLR36yh"
-      },
-      "outputs": [],
-      "source": [
+        "            bot.add_message_handler(guess)\n",
+        "\n",
+        "\n",
+        "\n",
         "@bot.message_handler(commands= [\"age\"])\n",
         "def age(message):\n",
         "  bot.send_message(message.chat.id, \"Enter your date of birth (yy/mm/dd):\")\n",
@@ -134,17 +114,9 @@
         "     month = differ // 30\n",
         "     day = differ % 30 - 7\n",
         "     result= \"your age: \" + str(year) + \" years and \" + str(month) + \" months and \" + str(day) + \" days\"\n",
-        "     bot.send_message(message.chat.id, result, reply_markup=markup)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 335,
-      "metadata": {
-        "id": "Xnf9Xe1nDsK1"
-      },
-      "outputs": [],
-      "source": [
+        "     bot.send_message(message.chat.id, result, reply_markup=markup)\n",
+        "\n",
+        "\n",
         "@bot.message_handler(commands= [\"text_to_voice\"])\n",
         "def text_to_voice(message):\n",
         "  bot.send_message(message.chat.id, \"Enter your Text: \")\n",
@@ -154,17 +126,10 @@
         "    x = gtts.gTTS(usertext, lang=\"en\", slow = False )\n",
         "    x.save(\"\\content\\drive\\MyDrive\\VoiceBot.mp3\")\n",
         "    voice = open(\"\\content\\drive\\MyDrive\\VoiceBot.mp3\", 'rb')\n",
-        "    bot.send_audio(message.chat.id, voice, reply_markup=markup)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 336,
-      "metadata": {
-        "id": "ojMKJFugVUfM"
-      },
-      "outputs": [],
-      "source": [
+        "    bot.send_audio(message.chat.id, voice, reply_markup=markup)\n",
+        "\n",
+        "\n",
+        "\n",
         "@bot.message_handler(commands= [\"max\"])\n",
         "def innum(message):\n",
         "  bot.send_message(message.chat.id,\"Please Enter numbers with comma.\\n(forexample: 2,3,4,1,7,0 = 7)\")\n",
@@ -176,17 +141,9 @@
         "    for num in newarray:\n",
         "      if max < int(num):\n",
         "        max = int(num)\n",
-        "    bot.send_message(message.chat.id, f\"The maximum number is {max}\", reply_markup=markup)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 337,
-      "metadata": {
-        "id": "hxTJcs2gWo_O"
-      },
-      "outputs": [],
-      "source": [
+        "    bot.send_message(message.chat.id, f\"The maximum number is {max}\", reply_markup=markup)\n",
+        "\n",
+        "\n",
         "@bot.message_handler(commands= [\"argmax\"])\n",
         "def innum(message):\n",
         "  bot.send_message(message.chat.id,\"Please Enter numbers with comma.\\n(forexample: 2,3,4,1,7,0 = 7)\")\n",
@@ -201,17 +158,9 @@
         "        max = int(num)\n",
         "        index = i\n",
         "      i=i+1\n",
-        "    bot.send_message(message.chat.id, f\"The argmax  is {index}\", reply_markup=markup)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 339,
-      "metadata": {
-        "id": "WHcpNabiXfP6"
-      },
-      "outputs": [],
-      "source": [
+        "    bot.send_message(message.chat.id, f\"The argmax  is {index}\", reply_markup=markup)\n",
+        "\n",
+        "\n",
         "@bot.message_handler(commands= [\"qrcode\"])\n",
         "def instr(message):\n",
         "  bot.send_message(message.chat.id,\"Please Enter your text: \")\n",
@@ -221,28 +170,10 @@
         "    img = qrcode.make(text)\n",
         "    img.save(\"\\content\\drive\\MyDrive\\qrcode.png\")\n",
         "    newimg = open(\"\\content\\drive\\MyDrive\\qrcode.png\",\"rb\")\n",
-        "    bot.send_photo(message.chat.id, newimg, reply_markup=markup)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "wKrEZyOY29qD"
-      },
-      "outputs": [],
-      "source": [
-        "bot.infinity_polling()"
+        "    bot.send_photo(message.chat.id, newimg, reply_markup=markup)\n",
+        "\n",
+        "\n",
+        "bot.infinity_polling()\n"
       ]
     }
   ],
