--- a/session9/Telebot.ipynb
+++ b/session9/Telebot.ipynb
@@ -49,7 +49,7 @@
       "outputs": [],
       "source": [
         "\n",
-        "bot = telebot.TeleBot(\"5702800312:AAGzHJ5kGLjeC8KRUgwdCi74zMB9wbELiJw\", parse_mode=None)\n",
+        "bot = telebot.TeleBot(\"Your Bot Token\", parse_mode=None)\n",
         "\n",
         "markup = telebot.types.ReplyKeyboardMarkup(row_width=7)\n",
         "key_1 = telebot.types.KeyboardButton('/start')\n",
